# Sylica-X

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.tor  LICENSE  NOTE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  silica-x.py
.github/workflows/: ci.yml  pages.yml  publish.yml
config/: silica_x_config.yml
core/: README.md  about.py  banner.py  cli_config.py  cli_parsers.py  cli_ui.py  credential_manager.py  csv_export.py  domain_intel.py  engine_manager.py  execution_policy.py  explain.py  exposure.py  forge_schema.py  help_menu.py  html_report.py  intel_pack.py  intelligence_advisor.py  lifecycle.py  live_server.py  metadata.py  network.py  orchestrator.py  output.py  platform_schema.py  plugin_manager.py  prompt_handlers.py  reporting.py  reverse_engineering.py  runner.py  scanner.py  security_manager.py  session_state.py  sieve_schema.py  signal_forge.py  signal_sieve.py  storage.py  thread_engine.py  utils.py
core/adapters/: __init__.py  domain_surface_adapter.py  profile_scanner_adapter.py
core/analyze/: __init__.py  confidence.py  correlator.py  digital_footprint.py  narrative.py  profile_summary.py  surface_map.py
core/artifacts/: __init__.py  charts.py  csv_export.py  docx_report.py  html_report.py  output.py  pdf_report.py  reporting.py  sql_store.py  storage.py
core/capabilities/: __init__.py  base.py  correlation_capability.py  domain_enumeration.py  username_lookup.py
core/collect/: __init__.py  anonymity.py  domain_intel.py  domain_recon.py  extractor.py  http_resilience.py  media_intel.py  media_recon.py  ocr_image_scan.py  ocr_pipeline.py  platform_schema.py  port_surface_probe.py  public_media_recon.py  scanner.py  source_fusion.py  subdomain_harvest.py  surface_exposure_map.py  vulnerability_intel.py
core/domain/: __init__.py  entities.py
core/engines/: __init__.py  async_engine.py  engine_base.py  fusion_engine.py  media_recon_engine.py  ocr_image_scan_engine.py  parallel_engine.py  scheduler.py  thread_engine.py
core/extensions/: __init__.py  attachables.py  control_plane.py  forge_schema.py  (+5 more)
docker/: Dockerfile  Dockerfile.tor  README.md  docker-compose.yml  tor-wrapper-linux.sh  tor-wrapper-macos.sh  tor-wrapper-termux.sh  tor-wrapper-windows.ps1  tor-wrapper.sh  torrc.silica
docker-scripts/: README.md  run-docker-linux.sh  run-docker-macos.sh  run-docker-termux.sh  run-docker-windows.ps1
docs/: README.md  Usage.txt  architecture.md  development.md  docker.md  extensions.md  hybrid-architecture.md  media-intelligence.md  ocr-image-scan-infrastructure.md  operator-guide.md  orchestration-architecture.md  release-checklist-v9.0-lattice.md  release-checklist-v9.2.0-lattice.md  release-commit-plan-v9.0-lattice.md  release-commit-plan-v9.2.0-lattice.md  release-notes-v9.0-lattice.md  reporter.md  silica-capability-scan.md
filters/: __init__.py  anomaly_detection_filter.py  contact_canonicalizer.py  contact_quality_filter.py  disclosure_readiness_filter.py  entity_name_resolver.py  evidence_consistency_filter.py  exposure_tier_matrix.py  link_hygiene_filter.py  mailbox_provider_profiler.py  module_filter_router.py  noise_suppression_filter.py  ocr_signal_classifier.py  pii_signal_classifier.py  sensitive_lexicon_guard.py  signal_lane_fusion.py  subdomain_attack_path_filter.py  takeover_priority_filter.py  triage_priority_filter.py
intel/: README.md  index.json  runtime-inventory.json
modules/: README.md  __init__.py  catalog.py  filter-modules.json  index.json  plugin-modules.json
plugins/: __init__.py  account_recovery_exposure_probe.py  contact_lattice.py  cross_platform_activity_timeline.py  domain_takeover_risk_probe.py  email_pattern_inference.py  header_hardening_probe.py  identity_fusion_core.py  link_outbound_risk_profiler.py  media_recon_engine.py  media_recon_shared.py  module_capability_matrix.py  orbit_link_matrix.py  post_signal_intel.py  rdap_lifecycle_inspector.py  security_txt_analyzer.py  signal_fusion_core.py  stego_signal_probe.py  subdomain_risk_atlas.py  surface_transport_stability_probe.py  threat_conductor.py  username_impersonation_probe.py
scripts/: scaffold_extension.py  smoke_suite.py
silica_x/: cli.py
sylica_x/: __init__.py
tests/: test_additional_filters.py  test_artifact_enrichment.py  test_blueprint_modules.py  test_capabilities_layer.py  test_command_spec.py  test_crypto_plugins.py  test_digital_footprint.py  test_docker_runtime.py  test_domain_entities.py  test_domain_intel.py  test_domain_recon.py  test_engine_runtime.py  test_execution_policy.py  test_extension_architecture.py  test_extension_control_plane.py  test_extension_selection.py  test_extensions_registry.py  test_extractor.py  test_filters_pipeline.py  test_fusion_components.py  test_fusion_layer.py  test_http_resilience.py  test_hybrid_architecture.py  test_module_catalog.py  test_native_engines.py  test_network_settings.py  test_new_extension_pack.py  test_ocr_image_scan_engine_runtime.py  test_ocr_pipeline.py  test_orchestrator_layer.py  test_packet_crafting.py  test_platform_inventory.py  test_platform_schema.py  test_port_surface_probe.py  test_prompt_handlers.py  test_public_media_recon.py  test_quicktest_templates.py  test_recon_frameworks.py  test_reporting_manager.py  test_research_scope.py  (+10 more)
(+142 files in other folders)
