[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sylica-x"
dynamic = ["version"]
description = "Multi-engine OSINT orchestration for profile intelligence, domain-surface reconnaissance, and fused correlation reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "voltsparx", email = "voltsparx@gmail.com" }]
keywords = ["osint-framework", "intelligence", "recon", "correlation", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aiohttp",
  "cryptography>=42.0.0",
  "scapy>=2.5.0",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.11,<2.0",
  "build>=1.2,<2.0",
  "twine>=6.0,<7.0",
]

[project.scripts]
sylica-x = "sylica_x.cli:main"

[project.urls]
Homepage = "https://github.com/voltsparx/Sylica-X"
Repository = "https://github.com/voltsparx/Sylica-X"
Issues = "https://github.com/voltsparx/Sylica-X/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "core.foundation.metadata.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "filters*", "modules*", "plugins*", "sylica_x*", "platforms*", "wordlists*"]
exclude = ["tests*", "docs*", "output*", "release-assets*", "self-structuring*", "docker*", "docker-scripts*"]

[tool.setuptools.package-data]
modules = ["*.json", "*.md"]
platforms = ["*.json"]
plugins = ["_intel/*.json", "_intel/*.md", "_intel/*/*.json", "_intel/*/*.md"]
filters = ["_intel/*.json", "_intel/*.md", "_intel/*/*.json", "_intel/*/*.md"]
wordlists = ["attack_surface/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  "output",
]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
files = [
  "core",
  "tests",
  "sylica_x",
  "sylica-x.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
