[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silica-x"
dynamic = ["version"]
description = "Multi-engine OSINT orchestration for profile intelligence, domain-surface reconnaissance, and fused correlation reporting."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "voltsparx", email = "voltsparx@gmail.com" }]
keywords = ["osint-framework", "intelligence", "recon", "correlation", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aiohttp",
  "cryptography>=42.0.0",
  "dnspython>=2.4.0",
  "matplotlib>=3.8.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "python-docx>=1.1.0",
  "pyyaml>=6.0",
  "pytesseract>=0.3.10",
  "reportlab>=4.2.0",
  "scapy>=2.5.0",
  "rich",
]

[project.optional-dependencies]
ocr = [
  "easyocr>=1.7.1",
]
reports = [
  "matplotlib>=3.8.0",
  "python-docx>=1.1.0",
  "reportlab>=4.2.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.11,<2.0",
  "build>=1.2,<2.0",
  "twine>=6.0,<7.0",
]

[project.scripts]
silica-x = "silica_x.cli:main"

[project.urls]
Homepage = "https://github.com/voltsparx/Silica-X"
Repository = "https://github.com/voltsparx/Silica-X"
Issues = "https://github.com/voltsparx/Silica-X/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "core.foundation.metadata.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "filters*", "modules*", "plugins*", "silica_x*", "platforms*", "wordlists*"]
exclude = ["tests*", "docs*", "output*", "release-assets*", "self-structuring*", "docker*", "docker-scripts*"]

[tool.setuptools.package-data]
modules = ["*.json", "*.md"]
platforms = ["*.json"]
plugins = ["_intel/*.json", "_intel/*.md", "_intel/*/*.json", "_intel/*/*.md"]
filters = ["_intel/*.json", "_intel/*.md", "_intel/*/*.json", "_intel/*/*.md"]
wordlists = ["attack_surface/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  "output",
]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
files = [
  "core",
  "tests",
  "silica_x",
  "silica-x.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
